// https://developers.google.com/protocol-buffers/docs/overview

syntax = "proto3";

option java_multiple_files = true;
option java_package = "tld.domain.proto";
option java_outer_classname = "HelloWorldProto";
option csharp_namespace = "grpc_netcore_helloworld_proto";

service GreeterService {
  rpc SayHelloUnary (HelloRequest) returns (HelloResponse);
  rpc SayHelloBidi (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string first_name = 1;
  string last_name = 2;
}

message HelloResponse {
  string message = 1;
}